new parameters for URI : ressource1,playlist_id,ressource2,video_id

--- a/etc/nginx/conf.d/default.conf
+++ b/etc/nginx/conf.d/default.conf
@@ -15,5 +15,5 @@ server {
 		fastcgi_param PATH_INFO $fastcgi_path_info;
     	}
 
-	rewrite ^/action/([a-z]*/?)([0-9]*/?)([a-z]*/?)([0-9]*/?)$ /index.php?action=$1&playlist_id=$2&action2=$3&video_id=$4 last;
+	rewrite ^/([a-z]*/?)([0-9]*/?)([a-z]*/?)([0-9]*/?)$ /index.php?ressource1=$1&playlist_id=$2&ressource2=$3&video_id=$4 last;
 }
